crater-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crater
  template:
    metadata:
      labels:
        app: crater
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      volumes:
      - name: crater-nginx-shared
        emptyDir: {}
      - name: mariadb
        persistentVolumeClaim:
          claimName: mariadb-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: uploads-config
        configMap:
          name: uploads-config
      containers:
      - name: nginx
        image: nginx:1.17-alpine
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
          - name: crater-nginx-shared
            mountPath: /var/www
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/nginx.conf
            subPath: nginx.conf
      - name: mariadb
        image: mariadb
        imagePullPolicy: Always
        ports:
        - containerPort: 33006
          protocol: TCP
        volumeMounts:
          - name: mariadb
            mountPath: /var/lib/mysql
      - name: crater
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        command: ["/bin/bash"]
        args: ["-c", "composer install --no-interaction --prefer-dist --optimize-autoloader && php artisan storage:link || true && php artisan key:generate"]
        imagePullPolicy: Always
        volumeMounts:
          - name: crater-nginx-shared
            mountPath: var/www
          - name: uploads-config
            mountPath: /usr/local/etc/php/conf.d/uploads.ini
            subPath: uploads.ini

---

apiVersion: v1
kind: Service
metadata:
  name: crater-service
spec:
  type: ClusterIP
  ports:
    - name: crater-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: crater

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: crater-ingress
spec:
  rules:
    - host: crater.guldentech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: crater-service
              servicePort: crater-port
